<resources>
    <string name="app_name">Pothole Hunter</string>

    <string name="my_map_api_key">agjapajpjapgaj</string>
    <string name="pothole_detection">"  Pothole Detection"</string>
    <string name="powered_by_uit">Powered by UIT</string>
    <string name="enter_your_username_email">Enter Your Username / Email:</string>
    <string name="enter_your_password">Enter Your Password:</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="Login">Login</string>
    <string name="donthaveaccount">"Don’t have an account? "</string>
    <string name="signup">Sign up</string>
    <string name="map">Map</string>
    <string name="feed">Feed</string>
    <string name="user">User</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="singup">Sign Up</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_phone">Enter your phone number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_password_description">No worries! Enter your email address below and we will send you a code to reset password.</string>
    <string name="confirm">Confirm</string>
    <string name="create_password">Create Password</string>
    <string name="create_password_description">Please enter and confirm your password.\nYou will need to login after reset</string>
    <string name="re_enter_your_password">Re-enter Your Password</string>
    <string name="check_your_email">Check your email</string>
    <string name="check_your_email_description">We sent a verification code to your mailbox.\nEnter 5-digit code that is mentioned in email</string>
    <string name="didnot_rev_code">Didn’t Receive Code?</string>
    <string name="resend_in_x_time">Resend code in 00:59 second</string>
    <string name="resend">Resend Code</string>
    <string name="setting">Settings</string>
    <string name="back_button_description">Back button</string>
    <string name="notification_feedback">Notifications &amp; Feedbacks</string>
    <string name="notification_icon">Notification icon</string>
    <string name="notifications">Notifications</string>
    <string name="icon_description">icon_description</string>
    <string name="default_option">Default Option</string>
    <string name="arrow_next">arrow next</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_icon">Dark Mode Icon</string>
    <string name="profile">Profile</string>
    <string name="regional">Regional</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="your_account">Your account</string>
    <string name="edit_personal_detail">Edit personal detail</string>
    <string name="go_to_account_details">Go to account details</string>
</resources>