<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:gravity="center">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/forgot_password_asset" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="30sp"
            android:textColor="#D2691E"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/forgot_password_description"
            android:textSize="14sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/black"
            android:layout_gravity="center" />


        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/enter_your_email"
            android:padding="15dp"
            android:background="@drawable/edittext_background"
            android:textColorHint="#C9000000"
            android:textSize="13sp"/>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/confirm"
            android:textColor="#FFFFFF"
            android:backgroundTint="#D2691E"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="13dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Login"
                android:textColor="#D2691E"
                android:textStyle="bold"
                android:layout_marginStart="5dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>