<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CreatePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:gravity="center">

        <ImageView
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="-50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_password"
            android:textSize="37sp"
            android:textColor="#D2691E"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/create_password_description"
            android:textSize="14sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxLines="2"
            android:ellipsize="end" />



        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/enter_your_password"
            android:padding="15dp"
            android:background="@drawable/edittext_background"
            android:inputType="textPassword"
            android:textColorHint="#C9000000"
            android:textSize="13sp"
            android:drawablePadding="5dp"
            android:drawableEnd="@drawable/visibility_off"
            android:longClickable="false"/>

        <EditText
            android:id="@+id/edtRePassword"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/re_enter_your_password"
            android:padding="15dp"
            android:background="@drawable/edittext_background"
            android:inputType="textPassword"
            android:textColorHint="#C9000000"
            android:textSize="13sp"
            android:drawablePadding="5dp"
            android:drawableEnd="@drawable/visibility_off"
            android:longClickable="false"/>

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/singup"
            android:textColor="#FFFFFF"
            android:backgroundTint="#D2691E"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="13dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Login"
                android:textColor="#D2691E"
                android:textStyle="bold"
                android:layout_marginStart="5dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>