<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".VerificationCodeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:gravity="center">

        <ImageView
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="-25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_your_email"
            android:textSize="37sp"
            android:textColor="#D2691E"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/check_your_email_description"
            android:textSize="14sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxLines="2"
            android:ellipsize="end" />

        <!-- Code Input Boxes -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/block1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/rounded_border"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textColor="#3F3F3F"
                android:padding="10dp"
                android:layout_margin="4dp" />

            <EditText
                android:id="@+id/block2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/rounded_border"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textColor="#3F3F3F"
                android:padding="10dp"
                android:layout_margin="4dp" />

            <EditText
                android:id="@+id/block3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/rounded_border"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textColor="#3F3F3F"
                android:padding="10dp"
                android:layout_margin="4dp" />

            <EditText
                android:id="@+id/block4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/rounded_border"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textColor="#3F3F3F"
                android:padding="10dp"
                android:layout_margin="4dp" />

            <EditText
                android:id="@+id/block5"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/rounded_border"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textColor="#3F3F3F"
                android:padding="10dp"
                android:layout_margin="4dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnConfirmVerifyCode"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/confirm"
            android:textColor="#FFFFFF"
            android:backgroundTint="#D2691E"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didnot_rev_code"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend"
                android:textColor="#3F51B5"
                android:textStyle="bold"
                android:layout_marginStart="5dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvResendCountdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_in_x_time"
            android:textColor="#000000"
            android:layout_marginTop="2dp"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Login"
                android:textColor="#D2691E"
                android:textStyle="bold"
                android:layout_marginStart="5dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>